# dissect3D

./: AGENTS.md
blender_plugin/: pyproject.toml
dissect_3D-core/: CONTRIBUTING.md  __init__.py  blender_manifest.toml
dissect_3D-core/environment/: memory.py  preferences.py
dissect_3D-core/src/common/image_processing/: remove_background.py
dissect_3D-core/src/common/setting/: device.py
dissect_3D-core/src/partcrafter/scripts/: inference_partcrafter.py
dissect_3D-core/src/partcrafter/src/pipelines/: pipeline_partcrafter.py
